welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:8: error: ';' expected but 'else' found.
	} else if ((day == 1 || day == 2) && vacation) {
          ^